@@ -1,6 +1,12 @@
 2014-04-04  Corinna Vinschen  <corinna@vinschen.de>
 
-	* ntea (EA_BUFSIZ): Reduce to 64K.  Add comment to explain why.
+	* ntea.cc (EA_BUFSIZ): Fix comment.
+	(read_ea): Use tmp_pathbuf for local buffer rather than alloca.
+	Throughout change ZwQueryEaFile to NtQueryEaFile in comments.
+
+2014-04-04  Corinna Vinschen  <corinna@vinschen.de>
+
+	* ntea.cc (EA_BUFSIZ): Reduce to 64K.  Add comment to explain why.
 
 2014-03-29  Christopher Faylor  <me.cygwin2014@cgf.cx>
 
